Segunda página del carrusel y modificación en la grilla

--- a/index.html
+++ b/index.html
@@ -119,17 +119,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <svg
-              class="bd-placeholder-img"
-              width="100%"
-              height="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <rect width="100%" height="100%" fill="#777" />
-            </svg>
+            <img src="./assets/img/mujercita.webp" />
 
             <div class="container">
               <div class="carousel-caption">
@@ -196,7 +186,7 @@
       <div class="container marketing">
         <!-- Three columns of text below the carousel -->
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <svg
               class="bd-placeholder-img rounded-circle"
               width="140"
@@ -212,17 +202,16 @@
               <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
             </svg>
 
-            <h2>Heading</h2>
+            <h2>Currículum</h2>
             <p>
-              Some representative placeholder content for the three columns of
-              text below the carousel. This is the first column.
+              Página creada con HTML
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Viisitar &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <svg
               class="bd-placeholder-img rounded-circle"
               width="140"
@@ -238,17 +227,16 @@
               <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
             </svg>
 
-            <h2>Heading</h2>
+            <h2>Landing Page</h2>
             <p>
-              Another exciting bit of representative placeholder content. This
-              time, we've moved on to the second column.
+              Página de venta de productos Waldorf.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Visitar &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <svg
               class="bd-placeholder-img rounded-circle"
               width="140"
@@ -264,13 +252,37 @@
               <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
             </svg>
 
-            <h2>Heading</h2>
+            <h2>Iguana Page</h2>
             <p>
-              And lastly this, the third column of representative placeholder
-              content.
+              Página creada con posicionamiento en CSS con FLEX.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Visitar &raquo;</a>
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-6">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder: 140x140"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#777" />
+              <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+            </svg>
+
+            <h2>Iguana Page</h2>
+            <p>
+              Página creada con posicionamiento en CSS con FLEX.
+            </p>
+            <p>
+              <a class="btn btn-secondary" href="#">Visitar &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -293,20 +305,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee" />
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+            
           </div>
         </div>
 
@@ -390,6 +389,6 @@
       </footer>
     </main>
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
