tercera página del carrusel

--- a/index.html
+++ b/index.html
@@ -123,27 +123,16 @@
 
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+                <h1>Segunda página</h1>
                 <p>
-                  Some representative placeholder content for the second slide
-                  of the carousel.
+                  Esta página está vacía por ahora.
                 </p>
                 <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <svg
-              class="bd-placeholder-img"
-              width="100%"
-              height="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <rect width="100%" height="100%" fill="#777" />
-            </svg>
+            <img src="./assets/img/primera mujer programadora.jpeg" />
 
             <div class="container">
               <div class="carousel-caption text-end">
@@ -277,9 +266,9 @@
               <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
             </svg>
 
-            <h2>Iguana Page</h2>
+            <h2>Cuppon</h2>
             <p>
-              Página creada con posicionamiento en CSS con FLEX.
+              Página implementando elementos de Bootstrap.
             </p>
             <p>
               <a class="btn btn-secondary" href="#">Visitar &raquo;</a>
